set(TARGET_NAME Decode)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)



file(GLOB_RECURSE TEST_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h ${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp)
file(GLOB_RECURSE TEST_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${TEST_HEAD} ${TEST_SOURCE})
add_executable(${TARGET_NAME} ${TEST_HEAD} ${TEST_SOURCE})

target_link_libraries(${TARGET_NAME} PUBLIC std_image)
set_target_properties(${TARGET_NAME} PROPERTIES FOLDER Tools)


